--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Mindbridge-innovations/backend#readme",
   "dependencies": {
+    "axios": "^1.6.5",
     "express": "^4.18.2"
   }
 }
