--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Mindbridge-innovations/backend#readme",
   "dependencies": {
     "axios": "^1.6.5",
+    "dotenv": "^16.4.0",
     "express": "^4.18.2"
   }
 }
