--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "dotenv": "^16.4.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "firebase": "^10.7.2"
   }
 }
