--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Mindbridge-innovations/backend#readme",
   "dependencies": {
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "firebase": "^10.7.2"
