--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Mindbridge-innovations/backend#readme",
   "dependencies": {
+    "@vonage/server-sdk": "^3.12.2",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
