--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "firebase": "^10.7.2",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
     "nodemailer": "^6.9.8"
