--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8"
   }
 }
