--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "short-unique-id": "^5.2.0"
   }
 }
