--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -33,5 +34,8 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "short-unique-id": "^5.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.1"
   }
 }
