--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "short-unique-id": "^5.2.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
