--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.1"
+    "chai": "^5.1.1",
+    "mocha": "^10.4.0",
+    "nodemon": "^3.1.1",
+    "supertest": "^7.0.0"
   }
 }
