--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the backend for the Mindbridge App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000 --exit tests/*.test.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -38,9 +38,11 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
+    "chai": "^4.3.4",
     "mocha": "^10.4.0",
+    "node-mocks-http": "^1.14.1",
     "nodemon": "^3.1.1",
+    "sinon": "^18.0.0",
     "supertest": "^7.0.0"
   }
 }
